syntax = "proto3";

package game.service;

option java_package = "com.nekgamebling.game.service";
option java_multiple_files = true;

import "dto/common.dto.proto";
import "dto/provider.dto.proto";
import "dto/game.dto.proto";
import "dto/aggregator.dto.proto";
import "dto/collection.dto.proto";

service GameService {
  rpc Find(FindGameQuery) returns (FindGameResult);
  rpc FindAll(FindAllGameQuery) returns (FindAllGameResult);
  rpc DemoUrl(GameDemoUrlQuery) returns (GameDemoUrlResult);
  rpc Update(UpdateGameCommand) returns (UpdateGameResult);
  rpc UpdateImage(UpdateGameImageCommand) returns (UpdateGameImageResult);
  rpc AddTag(AddGameTagCommand) returns (AddGameTagResult);
  rpc RemoveTag(RemoveGameTagCommand) returns (RemoveGameTagResult);
}

// ============================================
// Find Single Game
// ============================================

message FindGameQuery {
  string identity = 1;
}

message FindGameResult {
  dto.GameDto game = 1;

  dto.ProviderDto provider = 2;

  dto.GameVariantDto active_variant = 3;

  dto.AggregatorInfoDto aggregator = 4;

  repeated dto.CollectionDto collections = 5;
}

// ============================================
// Find All Games (Paginated)
// ============================================

message FindAllGameQuery {
  // Pagination
  dto.PaginationRequestDto pagination = 1;

  // Search query (matches game name or identity)
  string query = 2;

  // Filters
  optional bool active = 3;
  repeated string provider_identities = 4;
  repeated string collection_identities = 5;
  repeated string tags = 6;

  // Game feature filters
  optional bool bonus_bet_enable = 7;
  optional bool bonus_wagering_enable = 8;

  // Variant feature filters
  optional bool free_spin_enable = 9;
  optional bool free_chip_enable = 10;
  optional bool jackpot_enable = 11;
}

message FindAllGameResult {
  // Paginated game items
  repeated GameItemDto items = 1;
  dto.PaginationMetaDto pagination = 2;

  // Related entities from results
  repeated dto.ProviderDto providers = 3;
  repeated dto.AggregatorInfoDto aggregators = 4;
  repeated dto.CollectionDto collections = 5;
}

message GameItemDto {
  dto.GameDto game = 1;
  dto.GameVariantDto active_variant = 2;
  repeated string collection_identities = 3;
}

// ============================================
// Game Demo URL
// ============================================

message GameDemoUrlQuery {
  string identity = 1;
  string currency = 2;
  string locale = 3;
  dto.PlatformDto platform = 4;
  string lobby_url = 5;
}

message GameDemoUrlResult {
  string launch_url = 1;
}

// ============================================
// Update Game
// ============================================

message UpdateGameCommand {
  string identity = 1;
  optional bool bonus_bet_enable = 2;
  optional bool bonus_wagering_enable = 3;
}

message UpdateGameResult {
  // Empty response - success indicated by no error
}

// ============================================
// Update Game Image
// ============================================

message UpdateGameImageCommand {
  string identity = 1;
  string key = 2;
  bytes file = 3;
  string extension = 4;
}

message UpdateGameImageResult {
  // Empty response - success indicated by no error
}

// ============================================
// Add Game Tag
// ============================================

message AddGameTagCommand {
  string identity = 1;
  string tag = 2;
}

message AddGameTagResult {
  // Empty response - success indicated by no error
}

// ============================================
// Remove Game Tag
// ============================================

message RemoveGameTagCommand {
  string identity = 1;
  string tag = 2;
}

message RemoveGameTagResult {
  // Empty response - success indicated by no error
}